Corrected a few minor typos.

--- a/Content/Methodology/xp.tex
+++ b/Content/Methodology/xp.tex
@@ -56,5 +56,5 @@ This is a relatively short lived project, where some parts of the code may not n
  
 \paragraph{On-site costumer} is adapted a bit, as we serve as our own customer. This does not mean that each person can simple make up a requirement, but rather that the team as a whole should be asked whenever there is a question that would otherwise be directed at the customer. Additionally the team must fulfil the other tasks done by the customer, such as writing user stories and acceptance tests.
 
-\paragraph{Coding standards} used are in an informal form. The group has worked together multiple times and as a result have adapted and write code in a similar way. Differences between team members' code occurs, but overall the code produced looks similar. The informal coding standards improve collective ownership since no one can necessarily say ``He wrote this code, I can tell. It's his problem!'' because the code looks alike. It also aids refactoring because the refactorer is used to the code conforming to a code standard and thus is easier to read and rewrite.\Christoffer{Yderligere tilføjelser? Holder det vand?}
+\paragraph{Coding standards} used are in an informal form. The group has worked together multiple times and as a result have adapted to writing code in a similar way. Differences between team members' code occur, but overall the code produced looks similar. The informal coding standards improve collective ownership since no one can necessarily say ``He wrote this code, I can tell. It's his problem!'' because the code looks alike. It also aids refactoring because the refactorer is used to the code conforming to a code standard and thus is easier to read and rewrite.\Christoffer{Yderligere tilføjelser? Holder det vand?}
 \Alexander{Should be elaborated upon.}
