Added 'Reflection of Methodology' Chapter.

--- a/Report.tex
+++ b/Report.tex
@@ -41,6 +41,10 @@
 \label{chap:stepCounter}
 \input{Content/StepCounter/stepCounter}
 
+\chapter{Reflection of Methodology}
+\label{chap:reflectionMethodology}
+\input{Content/ReflectionMethodology/reflectionMethodology}
+
 \chapter{Conclusion}
 \label{chap:conclusion}
 \input{Content/Conclusion/discussion}
