Added 'Methodology Observations' section to stepcounter chapter.

--- a/Content/StepCounter/stepCounter.tex
+++ b/Content/StepCounter/stepCounter.tex
@@ -2,3 +2,4 @@
 \input{Content/StepCounter/useCases}
 \input{Content/StepCounter/specification}
 \input{Content/StepCounter/implementation}
+\input{Content/StepCounter/methodologyObservations}
