Restructured Methodology chapter.

--- a/Content/Methodology/methodology.tex
+++ b/Content/Methodology/methodology.tex
@@ -1,1 +1,4 @@
-\input{Content/Methodology/xp}
+\input{Content/Methodology/whatIsXP}
+\input{Content/Methodology/scrumComparison}
+\input{Content/Methodology/appliedXP}
+\input{Content/Methodology/modificationsOfXP}
