--- a/Content/Methodology/xp.tex
+++ b/Content/Methodology/xp.tex
@@ -1,4 +1,4 @@
-\section{Extreme Programming}
+\section{What is Extreme Programming?}
 XP (Extreme Programming) is an agile development methodology and this project is developed using the principles of XP. XP follows 12 core practices as decribed by \citet[p. 54]{xp:explained}.
 
 The purpose of the 12 practices is to ease the development of high quality software. This is partly done by ensuring thorough testing, continuous refactoring, and efficient knowledge sharing. XP further encourages improving oneself and the team as a whole.
