--- a/Report.tex
+++ b/Report.tex
@@ -35,7 +35,7 @@
 
 \chapter{Methodology}
 \label{chap:methodology}
-\input{Content/Methodology/xp}
+\input{Content/Methodology/methodology}
 
 \chapter{Step Counter}
 \label{chap:stepCounter}
