--- a/Content/Methodology/xp.tex
+++ b/Content/Methodology/xp.tex
@@ -42,7 +42,7 @@ This way of reporting individual estimates may influence the estimation of other
 \Ivan{$\downarrow$ Uddyb om formål, intuition og brug. (for alle paragrapher)}
 \paragraph{Small releases} are ensured by prioritising important tasks and making sure to have a working product for each release. A release should not take more than a few iterations, because the short time frame of the project makes it critical that we discover problems as early as possible, allowing us to discard less important features to have time to fix these problems.
 
-\paragraph{Metaphors} \textit{``guide all development with a simple shared story of how the whole system works''} according to \cite[p.54]{xp:planning}. For example a metaphor for this system could be a pacer or a personal trainer. The problem analysis in \Cref{chap:analysis} describes the metaphor for this system.
+\paragraph{Metaphors} \textit{``guide all development with a simple shared story of how the whole system works''} according to \citet[p.54]{xp:planning}. For example a metaphor for this system could be a pacer or a personal trainer. The problem analysis in \Cref{chap:analysis} describes the metaphor for this system.
 
 \paragraph{Simple design} means that all the code in the program must serve a purpose. This is achieved by always focussing on solving the problem at hand, rather than adding code that might solve a future problem. To make sure the design stays simple constant refactoring and testing is done.
 
