--- a/Content/ReflectionMethodology/TemporaryWorkSheets/tempWorkSheets.tex
+++ b/Content/ReflectionMethodology/TemporaryWorkSheets/tempWorkSheets.tex
@@ -1,4 +1,9 @@
 \section{Temporary Work Sheets}
 \input{Content/reflectionMethodology/TemporaryWorkSheets/review1}
+\input{Content/reflectionMethodology/TemporaryWorkSheets/retrospective1}
+\pagebreak
 \input{Content/reflectionMethodology/TemporaryWorkSheets/review2}
-%\input{Content/reflectionMethodology/TemporaryWorkSheets/review3}
+\input{Content/reflectionMethodology/TemporaryWorkSheets/retrospective2}
+\pagebreak
+\input{Content/reflectionMethodology/TemporaryWorkSheets/review3}
+\input{Content/reflectionMethodology/TemporaryWorkSheets/retrospective3}
