--- a/Content/ReflectionMethodology/reflectionMethodology.tex
+++ b/Content/ReflectionMethodology/reflectionMethodology.tex
@@ -1,4 +1,7 @@
 \input{Content/reflectionMethodology/reflectionPractices}
 
 
+
+
+\pagebreak
 \input{Content/reflectionMethodology/TemporaryWorkSheets/tempWorkSheets}
