added Ivans comments to report

--- a/Content/ReflectionMethodology/TemporaryWorkSheets/retrospective2.tex
+++ b/Content/ReflectionMethodology/TemporaryWorkSheets/retrospective2.tex
@@ -8,7 +8,7 @@ If we have any conflicts we will write it down in a coding standard document. We
 Ivan argued that our problem statement was a sort of metaphor, and we should not discard this practise entirely (as we suggested).
 The system could also be seen as a pacekeeper and/or a personal trainer.
 
-``pace'' might be ambiguous, as it can represent both velocity and SPM.
+``pace'' might be ambiguous, as it can represent both velocity and SPM. \Ivan{def. SPM}
 
 \subsubsection{40-hour Work Week}
 About halfway in the iteration we found that we would not be able to finish all tasks and we decided to take a few late days (to get just a little bit more done - we did not expect to finish all tasks either way).
@@ -22,10 +22,12 @@ We should regard each other, so we do not interrupt a member which are in the zo
 
 \subsubsection{Small Releases}
 We use it, so no comments..
+\Ivan{virker det?}
 
 \subsubsection{On-site Customer}
 After consideration about the responsibilities of a customer, we decided that Niels (Dan’s friend) would not have enough time to fulfill the role.
 We have therefore decided that we will completely use a simulated costumer.
+\Ivan{surrocate costumer}
 
 \subsubsection{Planning}
 We have experienced that we have an informal prioritising system, but this can cause problems when choosing new tasks, as these are chosen based on the developers curiosity and interest. The priorities of the tasks should therefore be defined by implementing a stack-like structure in order to ensure the most important tasks are done first.
@@ -39,8 +41,8 @@ In this iteration we mainly worked on one large task (GUI), which should have be
 XP makes use of the planning game for estimation of use cases. We first new the game as an individual exercise (explained), but later found, in the planning XP book, a collaborative version was described. We made/make use of planning poker as it has some advantages over the individual version of planning game. We later found that planning poker was very similar to the collaborative version of the planning game. (REMEMBER TO CHECK SOURCES) 
 
 \subsubsection{Refactoring}
-We found that our quality is not good enough, so we will in the future (against XP recommendations) have explicit tasks for refactoring.
-
+We found that our quality is not good enough, so we will in the future (against XP recommendations) have explicit tasks for refactoring. \Ivan{see fowler}
+\Kristian{refactoring bad code is ok}
 For now we will assign a number of hours for next iteration, but after that we will write a new issue for refactoring when we discover code smells in areas that are not part of the current issue and these will be estimated and prioritised for the following iteration (maybe they will be fixed as parts of other issues). Code smells in methods relevant to the current issue will be fixed on sight.
 
 \subsubsection{Simple Design}
@@ -57,6 +59,8 @@ We are still in the mindset of `I wrote it, it’s my code'. This has resulted i
 
 \subsubsection{Testing}
 We have mainly developed GUI in this iteration, so we have not created many tests, as we have no idea to automatically test GUI. We also already decided to not focus alot on GUI, so we argue that GUI tests are less important.
+\Ivan{no tools?}
+\Kristian{we got tools now}
 
 There were of course made tests for the changes in dynamic queue and database.
 
