--- a/Content/ReflectionMethodology/TemporaryWorkSheets/review1.tex
+++ b/Content/ReflectionMethodology/TemporaryWorkSheets/review1.tex
@@ -18,5 +18,5 @@ Equalizer og Playlist er heller ikke lavet, men de var ikke i sprint backloggen.
 \textbf{Programstatus på master}
 Programmet på master mangler stadig gui og database, så selvom funktionerne er der, er der ikke nogen måde at benytte dem på.
 Appen crasher af og til.
-Der er meget redundant kode (både i test og produktionskode), ubrugte constructors og metoder.
+Der er meget redundant kode (både i test og produktionskode), ubrugte constructors og metoder. \Ivan{brug af reactoring?}
 
